src/test/ui/unsized-locals/unsized-exprs.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-exprs.rs:22:26
   |
LL |     udrop::<(i32, [u8])>((42, *foo()));
   |                          ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `({integer}, [u8])`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `({integer}, [u8])`
   = note: tuples must have a statically known size to be initialized

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-exprs.rs:24:22
   |
LL |     udrop::<A<[u8]>>(A { 0: *foo() });
   |                      ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `A<[u8]>`, the trait `std::marker::Sized` is not implemented for `[u8]`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because it appears within the type `A<[u8]>`
   = note: structs must have a statically known size to be initialized

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
